DeveloperOrg/force-app/main/default/objects/Lead/fields/Hot_Lead_Tier__c.field-meta.xml
<CustomField>
    <fullName>Hot_Lead_Tier__c</fullName>
    <formula>IF( ISPICKVAL( Rating , &apos;Hot&apos;) &amp;&amp;  AnnualRevenue &gt; 500000,  &apos;Valied&apos;, &apos;InValied&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hot Lead Tier</label>
    <type>Text</type>
</CustomField>