DeveloperOrg/force-app/main/default/objects/Lead/fields/Is_Duplicate_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duplicate Email</label>
    <type>Checkbox</type>
</CustomField>