DeveloperOrg/force-app/main/default/objects/Lead/validationRules/Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Email</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS(Email,&apos;@&apos;))</errorConditionFormula>
    <errorMessage>Email is Mandory</errorMessage>
</ValidationRule>