DeveloperOrg/force-app/main/default/objects/Lead/validationRules/Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  ISPICKVAL (Region__c,&quot;APAC&quot;), 
OR(
 ISPICKVAL( Rating , &quot;Hot&quot;) , AnnualRevenue &gt; 500000))</errorConditionFormula>
    <errorDisplayField>Region__c</errorDisplayField>
    <errorMessage>Validation_Rule</errorMessage>
</ValidationRule>