DeveloperOrg/force-app/main/default/objects/Lead/listViews/Education_Sales_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Education_Sales_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Education Sales Queue</label>
    <queue>Education_Sales_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>