DeveloperOrg/force-app/main/default/objects/Lead/listViews/Healthcare_Sales_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Healthcare_Sales_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Healthcare Sales Queue.</label>
    <queue>Healthcare_Sales_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>