DeveloperOrg/force-app/main/default/objects/Lead/listViews/Standard_leads_Lead.listView-meta.xml
<ListView>
    <fullName>Standard_leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Standard leads</label>
    <queue>Standard_leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>