DeveloperOrg/force-app/main/default/objects/Lead/listViews/Support_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Support_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Leads</label>
    <queue>Support_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>